Fix unknown file types not loading

--- a/frontend/sf/index.html
+++ b/frontend/sf/index.html
@@ -242,7 +242,7 @@
             break
           default:
             badgeText = 'Unknown'
-            document.querySelector('#type').style.display = 'none'
+            document.querySelector('#badge').style.display = 'none'
         }
 
         document.querySelector('#badge').classList.add(params.extension)
